--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ scripts/assets/image_2.png
 scripts/test1
 scripts/test2
 plugins/__pycache__/pluginMediator.cpython-39.pyc
+scripts/test3
+scripts/test4
+scripts/test5
+scripts/test6
+scripts/test7
