Can now drag frame,implemented custom markdown,etc

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ scripts/test6
 scripts/test7
 scripts/test8
 scripts/test9
+scripts/test10
+scripts/test11
+scripts/regex examples.py
+scripts/__pycache__/basicMarkdown.cpython-39.pyc
